--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,6 @@ TODO
 [ ] Gradient Descent
 [ ] Stochastic Gradient Descent
 [ ] Make kmeans pretty
-[ ] Check for the last plot in SV
+[X] Check for the last plot in SV
 
 
